main overflow fix

--- a/src/css/story/story.styl
+++ b/src/css/story/story.styl
@@ -2,6 +2,9 @@
 body
     overflow hidden
 
+main
+    overflow hidden
+
 #story
     position absolute
     left 50%
